# shorter

./: .gitignore  LICENSE  pyproject.toml
shorter/: __init__.py
